Give .main p:last-child extra bottom padding to prevent last line getting cutoff by footer (throttled)

--- a/css/custom/custom-other.less
+++ b/css/custom/custom-other.less
@@ -370,6 +370,11 @@ img.pull-right {
 			margin-bottom: -1px;
 		}
 	}
+	p:last-child {
+		@media (min-width: @screen-sm) {
+			margin-bottom: 50px;
+		}
+	}
 }
 
 .sidebar {
